Clean legacy provider documentation
